Some validation functions, minor fixes

--- a/test/required.html
+++ b/test/required.html
@@ -19,6 +19,19 @@
 	
 	<div id="qunit-fixture">
 	
+		<form class="validarium">
+			<input type="text" data-rules-required="true"/>
+			<input type="password" data-rules-required="true"/>
+			<select>
+				<option value="1">A</option>
+				<option value="2">B</option>
+			</select>
+
+			<input type="checkbox" data-rules-required="true"/>
+			
+			<input type="radio" name="radiogrouprequired" value="1" data-rules-required="true"/>
+			<input type="radio" name="radiogrouprequired" value="2" data-rules-required="true"/>
+		</form>
 	</div>
 	
 	<div id="qunit"></div>
