Jquery, several versions Test renamed

--- a/test/index.html
+++ b/test/index.html
@@ -1,14 +1,14 @@
 <html>
 <head>
 	<title>Validarium test suite</title>
-	<link rel="stylesheet" href="qunit/qunit.css" />
+	<link rel="stylesheet" href="qunit/qunit-1.10.0.css" />
 	<script src="jquery.js"></script>
-	<script src="qunit/qunit.js"></script>
+	<script src="qunit/qunit-1.10.0.js"></script>
 	<script src="../src/jquery.validarium.js"></script>
 </head>
 <body>
 	<h1 id="qunit-header">
-		<a href="http://bassistance.de/jquery-plugins/jquery-plugin-validation/">jQuery Validation Plugin</a> Test Suite
+		<a href="https://github.com/Corollarium/validarium">Validarium</a> Test Suite
 			<a href="?jquery=1.4.4">jQuery 1.4.4</a>
 			<a href="?jquery=1.5.2">jQuery 1.5.2</a>
 			<a href="?jquery=1.6.4">jQuery 1.6.4</a>
@@ -16,6 +16,10 @@
 			<a href="?jquery=1.8.3">jQuery 1.8.3</a>
 			<a href="?jquery=git">jQuery Latest (git)</a>
 	</h1>
+	<h2 id="qunit-banner"></h2>
+	<div id="qunit-testrunner-toolbar"></div>
+	<h2 id="qunit-userAgent"></h2>
+	<ol id="qunit-tests"></ol>
 	
 	<div id="qunit-fixture">
 	
