Fix, starting to run

--- a/test/index.html
+++ b/test/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 	<title>Validarium test suite</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<link rel="stylesheet" href="qunit/qunit-1.10.0.css" />
 	<script src="jquery.js"></script>
 	<script src="qunit/qunit-1.10.0.js"></script>
