--- a/test/index.html
+++ b/test/index.html
@@ -32,6 +32,10 @@
 		<form id="testFormLength">
 			<input type="text" data-rules-minlength="3" data-rules-maxlength="10"/>
 		</form>
+
+		<form id="testFormRegexp">
+			<input type="text" data-rules-regexp="^([a-z]{3})([0-9]{2})$"/>
+		</form>
 		
 		<form id="testFormRequiredOption">
 			<select>
