--- a/test/index.html
+++ b/test/index.html
@@ -26,7 +26,8 @@
 	<div id="qunit-fixture">
 	
 		<form id="testFormRequiredText">
-			<input type="text" data-rules-required="true"/>
+			<input type="text" name="a" data-rules-required="true"/>
+			<input type="text" name="b" data-rules-required="false"/>
 		</form>
 
 		<form id="testFormLength">
