--- a/test/index.html
+++ b/test/index.html
@@ -69,7 +69,28 @@
 			<input type="password" id="equalTopw2" data-rules-equalTo="#equalTopw1"/>
 		</form>
 		
-		<form>
+		<form id="testFormMinMax">
+			<input type="text" name="a" data-rules-min="4" data-rules-max="10"/>
+		</form>
+		
+		<form id="testFormEmail">
+			<input type="text" name="a" data-rules-email="true"/>
+		</form>
+		
+		<form id="testFormUrl">
+			<input type="text" name="a" data-rules-url="true"/>
+		</form>
+		
+		<form id="testFormDigits">
+			<input type="text" name="a" data-rules-digits="true"/>
+		</form>
+		
+		<form id="testFormNumber">
+			<input type="text" name="a" data-rules-number="true"/>
+		</form>
+		
+		<form id="testFormDate">
+			<input type="text" name="a" data-rules-date="true"/>
 		</form>
 	</div>
 	
