Tests and change methods to lowercase

--- a/test/index.html
+++ b/test/index.html
@@ -92,6 +92,14 @@
 		<form id="testFormDate">
 			<input type="text" name="a" data-rules-date="true"/>
 		</form>
+		
+		<form id="testFormDateISO">
+			<input type="text" name="a" data-rules-dateISO="true"/>
+		</form>
+		
+		<form id="testFormMask">
+			<input type="text" name="a" data-rules-mask="true"/>
+		</form>
 	</div>
 	
 	<div id="qunit"></div>
