Starting to test ajax.

--- a/demo/index.html
+++ b/demo/index.html
@@ -59,6 +59,12 @@
 			<input type="text" name="a" data-rules-url="true"/>
 		</label>
 
+		<label>Ajax (always right)
+			<input type="text" name="a" data-rules-remote="ajax.txt"/>
+		</label>
+
+
+
 		<input type="submit"/>
 	</form>
 	
