--- a/test/index.html
+++ b/test/index.html
@@ -112,6 +112,11 @@
 			<input type="text" name="i3" data-rules-required="true" style="display: none;" class="noignore" />
 		</form>
 	
+		<form id="testFormFocus">
+			<input type="text" name="f1" data-rules-required="true" />
+			<input type="text" name="f2" data-rules-required="true" />
+			<input type="text" name="f3" data-rules-required="true" />
+		</form>
 	</div>
 	<div id="qunit"></div>
 </body>
