time and datetime rules

--- a/test/index.html
+++ b/test/index.html
@@ -91,12 +91,20 @@
 			<input type="text" name="a" data-rules-number="true"/>
 		</form>
 		
+		<form id="testFormTime">
+			<input type="text" name="a" data-rules-time="true"/>
+		</form>
+		
 		<form id="testFormDate">
 			<input type="text" name="a" data-rules-date="true"/>
 		</form>
 		
 		<form id="testFormDateISO">
 			<input type="text" name="a" data-rules-dateISO="true"/>
+		</form>
+		
+		<form id="testFormDatetime">
+			<input type="text" name="a" data-rules-datetime="true"/>
 		</form>
 		
 		<form id="testFormMask">
