Support for domain validation

--- a/test/index.html
+++ b/test/index.html
@@ -86,6 +86,10 @@
 		<form id="testFormDigits">
 			<input type="text" name="a" data-rules-digits="true"/>
 		</form>
+
+		<form id="testFormDomain">
+			<input type="text" name="a" data-rules-domain="true"/>
+		</form>
 		
 		<form id="testFormNumber">
 			<input type="text" name="a" data-rules-number="true"/>
