moving required tests to separate file

--- a/test/index.html
+++ b/test/index.html
@@ -7,6 +7,7 @@
 	<script src="qunit/qunit-1.11.0.js"></script>
 	<script src="../src/jquery.validarium.js"></script>
 	<script src="../lib/jquery.mockjax.js"></script>
+	<script src="required-test.js"></script>
 	<script src="test.js"></script>
 </head>
 <body>
