add required test for RADIO input

--- a/test/index.html
+++ b/test/index.html
@@ -62,9 +62,11 @@
 			<input type="checkbox" name="checkbox" value="a" data-rules-required="true"/>
 		</form>
 
-		<form>
+		<form id="radioRequired">
 			<input type="radio" name="radiogrouprequired" value="1" data-rules-required="true"/>
 			<input type="radio" name="radiogrouprequired" value="2" data-rules-required="true"/>
+			<input type="radio" name="radiogrouprequired" value="3" data-rules-required="true"/>
+			<input type="radio" name="radiogrouprequired" value="4" data-rules-required="true"/>
 		</form>
 
 		<form id="testFormequalTo">
