moving remote tests to separte file ; fix remote tests, remote is only triggered onblur or onsubmit

--- a/test/index.html
+++ b/test/index.html
@@ -9,6 +9,7 @@
 	<script src="../lib/jquery.mockjax.js"></script>
 	<script src="required-test.js"></script>
 	<script src="test.js"></script>
+	<script src="ajax-test.js"></script>
 </head>
 <body>
 	<h1 id="qunit-header">
